--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
     </header>
 
-    <div id="carrossel" class="carrossel">
+    <div id="carrossel" class="carrossel carrossel-size">
         <img src="img/banner1.png" id="imgCarrossel1">
         <img src="img/banner2.png" id="imgCarrossel2">
         <img src="img/banner3.png" id="imgCarrossel3">
